[package]
name = "iota-client"
version = "0.5.0-alpha.3"
authors = ["Nathan Jaremko <nathan@jaremko.ca>", "Yu-Wei Wu <wusyong9104@gmail.com>"]
edition = "2018"
description = "Client to use Iota APIs"
repository = "https://github.com/iotaledger/iota.rs"
homepage = "https://github.com/iotaledger/iota.rs"
documentation = "https://docs.rs/iota-client"
license = "MIT"

[lib]
name = "iota_client"

[dependencies]
bee-transaction = { git = "https://github.com/Thoralf-M/bee-p.git", rev = "babcd69b2f75799649ef2d41e1db77bebde35e3b" }
bee-ternary = { version = "0.3.2-alpha", git = "https://github.com/Thoralf-M/bee.git", branch = "dev", features = ["serde1"] }
bee-signing = { git = "https://github.com/Thoralf-M/bee.git", branch = "dev" }
bee-crypto = { git = "https://github.com/Thoralf-M/bee.git", branch = "dev" }
reqwest = { version = "0.10.6", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = {version = "0.4.12", features = ["wasmbind"]}
async-std = "1.6.4"

[dev-dependencies]
anyhow = "1.0.31"
smol-potat = "0.3.3"

[features]
# quorum = ["smol"]
wasm = ["chrono/wasmbind"]

#[[test]]
#name = "quorum"
#required-features = ["quorum"]
