[package]
name = "iota-core"
version = "0.2.0-alpha.3"
authors = ["YuWeiWu <wusyong9104@gmail.com>"]
edition = "2018"
description = "Core library of IOTA"
license = "MIT"

[lib]
name = "iota"

[dependencies]
bee-transaction = { git = "https://github.com/Alex6323/bee-p.git", rev="926c0e01cf974adf7a3b1488093106388f90923d" }
# bee-transaction = { path = "../../bee-p/bee-transaction" }
# bee-ternary = "0.3.1-alpha"
bee-ternary = { version = "0.3.1-alpha", git = "https://github.com/iotaledger/bee.git", features = ["serde1"], branch = "dev" }
bee-signing = { version = "0.1.0-alpha", git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-crypto = {version = "0.1.0-alpha", git = "https://github.com/iotaledger/bee.git", branch = "dev"}

# # bee-transaction = { git = "https://github.com/Alex6323/bee-p.git" }
# bee-transaction = { path = "../../bee-p/bee-transaction" }
# # bee-ternary = { version = "0.3.1-alpha", git = "https://github.com/iotaledger/bee.git", features = ["serde1"] }
# bee-ternary = "0.3.1-alpha"
# # bee-signing = { path = "../../bee-p/bee-signing" }
# # bee-signing = { git = "https://github.com/iotaledger/bee.git" }
# bee-signing = "0.1.0-alpha"
# # bee-crypto = { path = "../../bee-p/bee-crypto"  }
# bee-crypto = "0.1.0-alpha"
# # bee-crypto = { git = "https://github.com/iotaledger/bee.git" }
iota-client = { version = "0.5.0-alpha", path = "../iota-client" }

#[features]
#quorum = ["iota-client/quorum"]
#wasm = ["iota-client/wasm"]
