[package]
name = "iota-core"
version = "0.2.0-alpha.3"
authors = ["YuWeiWu <wusyong9104@gmail.com>"]
edition = "2018"
description = "Core library of IOTA"
license = "MIT"

[lib]
name = "iota"
# path = "lib.rs"

[dependencies]
bee-transaction = { git = "https://github.com/Thoralf-M/bee-p.git", rev = "babcd69b2f75799649ef2d41e1db77bebde35e3b" }
bee-ternary = { version = "0.3.2-alpha", git = "https://github.com/Thoralf-M/bee.git", branch = "dev", features = ["serde1"] }
bee-signing = { git = "https://github.com/Thoralf-M/bee.git", branch = "dev" }
bee-crypto = { git = "https://github.com/Thoralf-M/bee.git", branch = "dev" }
iota-client = { version = "0.5.0-alpha", path = "../iota-client" }

[features]
# quorum = ["iota-client/quorum"]
wasm = ["iota-client/wasm"]
